Lesson 6 external stylesheets

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 
     <head>
         <title>CSS For Beginners</title>
+        <link rel="stylesheet" type="text/css" href="css/syntax.css">
     </head>
 
     <body>
+
+        <p class="welcome">Welcome!</p>
+
         <div id="header">
             <h1>Selectors</h1>
             <h2>In CSS</h2>
@@ -14,4 +18,5 @@
         <p>Hello ninjas!</p>
         
     </body>
+    
 </html>
