--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         </div>
 
         <p>Hello ninjas!</p>
+
+        <a href="http://www.google.com">Google</a>
+
+        <span>Yo, I'm a span tag</span>
         
     </body>
     
