--- a/contact.html
+++ b/contact.html
@@ -16,19 +16,20 @@
 
         <h2 id="content-header">Content</h2>
 
-        <div>
-            <p>Hello there ninjas! Contact us below.</p>
-            <p>Arent't paragraphs cool?</p>
+        <div id="main-content">
+            <p>Hello there <strong>ninjas!</strong> Contact us below.</p>
+            <p class="test">Arent't paragraphs cool?</p>
         </div>>
 
-        <span>Yo, I'm a span tag</span>
+        <p>None contained P tag</p>
 
+        <span>Yo, I'm a span tag</span>
         <span class="deck">Yo I'm a span tag too</span>
         <span class="deck">This is a deck of spans</span>
         <span class="deck">I like span decks</span>
 
         <a href="#">I'm  a spanner</a>
-        
+
     </body>
     
 </html>
