--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
         <div id="main-content">
             <p>Hello there <strong>ninjas!</strong> Contact us below.</p>
-            <p class="test">Arent't paragraphs cool?</p>
+            <p>Arent't paragraphs cool?</p>
         </div>>
 
         <p>None contained P tag</p>
@@ -30,6 +30,10 @@
 
         <a href="#">I'm  a spanner</a>
 
+        <ul>
+            <li>List items are fun</li>
+            <li>List items are fun</li>
+        </ul>
     </body>
     
 </html>
