--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,14 @@
         <h2 id="content-header">Content</h2>
 
         <div id="main-content">
+
             <p>Hello there <strong>ninjas!</strong> Contact us below.</p>
             <p>Arent't paragraphs cool?</p>
+
+            <div id="sub-content">
+                <p>More content</p>
+            </div>
+
         </div>>
 
         <p>None contained P tag</p>
