--- a/contact.html
+++ b/contact.html
@@ -21,20 +21,23 @@
             <p>Hello there <strong>ninjas!</strong> Contact us below.</p>
             <p>Arent't paragraphs cool?</p>
 
-            <div id="sub-content">
-                <p>More content</p>
-            </div>
-
         </div>>
 
-        <p>None contained P tag</p>
+        <div>
+            <p>This is a third div</p>
+        </div>
 
         <span>Yo, I'm a span tag</span>
-        <span class="deck">Yo I'm a span tag too</span>
+        <span class="deck halls">Yo I'm a span tag too</span>
         <span class="deck">This is a deck of spans</span>
         <span class="deck">I like span decks</span>
 
-        <a href="#">I'm  a spanner</a>
+        <a href="#">I'm  a link</a>
+        <a href="http://www.google.com" title="Google">I'm a link</a>
+        <a href="http://www.google.com" title="search engine">I'm a link</a>
+        <a href="something.pdf">pdf file</a>
+        <a href="something.pdf">pdf file</a>
+        <a href="something2.pdf">pdf file</a>
 
         <ul>
             <li>List items are fun</li>
