--- a/articles.html
+++ b/articles.html
@@ -7,31 +7,23 @@
 
 <body>
 
-    <div id="header">
-        <h1>Articles</h1>
-    </div>
+    <h2>Most Recent Articles</h2>
 
-    <div id="all-articles">
+    <article>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
+        <p>To read more click <a href="#">here</a></p>
+    </article>
 
-        <h2>Article #1</h2>
-        <p>Published by the Net Ninja</p>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-
-        <h2>Article #2</h2>
-        <p>Published by the Net Ninja</p>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-
-        <h2>Article #3</h2>
-        <p>Published by the Net Ninja</p>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-
-    </div>
+    <article>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
+        <p>To read more click <a href="#">here</a></p>
+    </article>
 
 </body>
 
