--- a/articles.html
+++ b/articles.html
@@ -10,19 +10,23 @@
     <h2>Most Recent Articles</h2>
 
     <article>
+        <h2>Article 1 Title</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
         <p>To read more click <a href="#">here</a></p>
+        <hr>
     </article>
 
     <article>
+        <h2>Article 2 Title</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
         <p>To read more click <a href="#">here</a></p>
+        <hr>
     </article>
 
 </body>
