--- a/articles.html
+++ b/articles.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 
 <head>
     <title>CSS For Beginners</title>  
@@ -7,27 +8,44 @@
 
 <body>
 
-    <h2>Most Recent Articles</h2>
+    <div>
+
+    <h1>Articles</h1>
 
     <article>
-        <h2>Article 1 Title</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
-        <p>To read more click <a href="#">here</a></p>
-        <hr>
+        <h2>Title</h2>
+        <p>blah blah blah</p>
+        <p>blah blah blah</p>
     </article>
 
+    <hr>
+
+    <h2>marketing message</h2>
+    <a href="#">Offers!</a>
+
     <article>
-        <h2>Article 2 Title</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut omnis ratione iusto asperiores quod dolores doloremque, nisi voluptas explicabo eum praesentium necessitatibus eligendi ab impedit aliquid sunt repellat nostrum non.</p>
-        <p>To read more click <a href="#">here</a></p>
-        <hr>
+        <h2>Title</h2>
+        <p>blah blah blah</p>
+        <p>blah blah blah</p>
     </article>
+
+    <hr>
+
+    <article>
+        <h2>Title</h2>
+        <p>blah blah blah</p>
+        <p>blah blah blah</p>
+    </article>
+
+    <hr>
+
+    <article>
+        <h2>Title</h2>
+        <p>blah blah blah</p>
+        <p>blah blah blah</p>
+    </article>
+
+    </div>
 
 </body>
 
