--- a/articles.html
+++ b/articles.html
@@ -10,40 +10,22 @@
 
     <div>
 
-    <h1>Articles</h1>
+        <article class="featured-content">
+            <p>dummy text</p>
+        </article>
 
-    <article>
-        <h2>Title</h2>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-    </article>
+        <article>
+            <p>dummy text</p>
+        </article>
 
-    <hr>
+        <div class="featured-content">
+            <img src="#">
+        </div>
 
-    <h2>marketing message</h2>
-    <a href="#">Offers!</a>
+        <div>
+            <img src="#">
+        </div>
 
-    <article>
-        <h2>Title</h2>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-    </article>
-
-    <hr>
-
-    <article>
-        <h2>Title</h2>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-    </article>
-
-    <hr>
-
-    <article>
-        <h2>Title</h2>
-        <p>blah blah blah</p>
-        <p>blah blah blah</p>
-    </article>
 
     </div>
 
