--- a/articles.html
+++ b/articles.html
@@ -8,14 +8,22 @@
 
 <body>
 
-    <div>
+        <h1>Most Recent Articles</h1>
 
-        <article class="featured-content">
+        <article>
+            <h2>Article 1 Title</h2>
             <p>dummy text</p>
+            <p>dummy text</p>
+            <p>dummy text</p>
+            <hr>
         </article>
 
         <article>
+            <h2>Article 2 Title</h2>
             <p>dummy text</p>
+            <p>dummy text</p>
+            <p>dummy text</p>
+            <hr>
         </article>
 
         <div class="featured-content">
@@ -25,9 +33,6 @@
         <div>
             <img src="#">
         </div>
-
-
-    </div>
 
 </body>
 
