--- a/articles.html
+++ b/articles.html
@@ -23,6 +23,7 @@
             <p>dummy text</p>
             <p>dummy text</p>
             <p>dummy text</p>
+            <p>To read more click <a href="#">here</a></p>
             <hr>
         </article>
 
