--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         </div>
 
         <p>Hello ninjas!</p>
+        <p>Hello ninjas!</p>
+        <p>Hello ninjas!</p>
+        <p>Hello ninjas!</p>
 
         <a href="http://www.google.com">Google</a>
 
