--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p>Hello ninjas!</p>
 
         <a href="http://www.google.com">Google</a>
-
-        <span>Yo, I'm a span tag</span>
+        <a href="http://www.google.com">Google</a>
+        <a href="http://www.google.com">Google</a>
         
     </body>
     
