--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 
             <h1>CSS for Beginners</h1>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima itaque suscipit molestias necessitatibus saepe ipsa ratione soluta provident rem nemo hic dolorum dolores, voluptas magnam! Iste inventore maiores voluptatibus odit!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, deleniti sit nisi accusantium quibusdam ea repellat vero pariatur eius maiores perferendis quam! Architecto illum assumenda explicabo voluptatem cupiditate eveniet molestias.</p>
-            <p>Hello ninjas!</p>
-            <p>Hello ninjas!</p>
-
+            <div class="box">This is the content</div>
+            <div class="box">This is the content</div>
+            
         </div>
 
         <a href="http://www.google.com">Google</a>
