Padding&Margin Long-hand

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>CSS for Beginners</h1>
 
             <div class="box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio, inventore. Odit ipsum mollitia, quibusdam iusto, delectus ex quaerat natus, consectetur pariatur eos similique voluptas quae quis! Rerum eligendi atque porro.</div>
-            <div class="box">This is the content</div>
+            <div class="box small">This is the content</div>
             
         </div>
 
