--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
 
             <h1>CSS for Beginners</h1>
 
-            <div class="box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio, inventore. Odit ipsum mollitia, quibusdam iusto, delectus ex quaerat natus, consectetur pariatur eos similique voluptas quae quis! Rerum eligendi atque porro.</div>
-            <div class="box small">This is the content</div>
+            <div class="box dashed">dashed</div>
+            <div class="box groove">groove</div>
+            <div class="box double">double</div>
+            <div class="box dotted">dotted</div>
+            <div class="box inset">inset</div>
+            <div class="box solid">solid</div>
+            <div class="box outset">outset</div>
             
         </div>
 
