--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <h1>CSS for Beginners</h1>
             
-            <div class="static-width">Static Pixel Width</div>
+            <div id="banner">Banner</div>
             
         </div>
 
