--- a/index.html
+++ b/index.html
@@ -7,19 +7,11 @@
 
     <body>
 
-        <p class="welcome">Welcome!</p>
-
-        <div id="header">
-            <h1>Selectors</h1>
-            <h2>In CSS</h2>
-            <p>Welcome to the website!</p>
-        </div>
-
         <div id="main-content">
-
-            <h1>CSS for Beginners</h1>
             
-            <div id="banner">Banner</div>
+            <div id="circle-1">Hello</div>
+            <div id="circle-2">Hello</div>
+            <div id="circle-3">Hello</div>        
             
         </div>
 
