--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
         <div id="main-content">
             
-            <div id="circle-1">Hello</div>
-            <div id="circle-2">Hello</div>
-            <div id="circle-3">Hello</div>        
+            <div class="button">Click Me</div>   
             
         </div>
 
